# GALO

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.json
docs/: ARCHITECTURE.md  DASHBOARD_PROMPT.md  TASK.md  architecture.excalidraw
src/galo/: __init__.py  config.py
src/galo/ingest/: __init__.py  chunker.py  extract.py  loader.py  orchestrator.py  parse.py  types.py
src/galo/maintain/: __init__.py  reconcile.py  resolve.py
src/galo/models/: __init__.py  gateway.py  ollama.py
src/galo/retrieve/: __init__.py  fuse.py  graph.py  orchestrator.py  path.py  recommend.py  types.py  vector.py
src/galo/serve/: app.py  middleware.py  schemas.py
src/galo/serve/routes/: dashboard.py  health.py  ingest.py  ops.py  query.py  recommend.py
src/galo/serve/static/: __init__.py  dashboard.html  graph.html
src/galo/stores/: __init__.py  neo4j.py  pg.py  schema.sql
tests/: test_chunker.py  test_extract.py  test_fuse.py  test_health.py  test_ingest.py  test_parse.py  test_platform.py  test_reconcile.py  test_resolve.py  test_retrieve.py
