[project]
name = "galo"
version = "0.1.0"
description = "Graph Aware Learning Orchestration System — self-hosted GraphRAG platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "asyncpg>=0.30",
    "neo4j>=5.26",
    "python-multipart>=0.0.9",
    "pypdf>=5.1",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[project.scripts]
galo = "galo.serve.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/galo"]
artifacts = ["src/galo/stores/schema.sql", "src/galo/serve/static/dashboard.html"]

[tool.hatch.build.targets.wheel.force-include]
"src/galo/stores/schema.sql" = "galo/stores/schema.sql"
"src/galo/serve/static/dashboard.html" = "galo/serve/static/dashboard.html"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
